# system_programming

./: .gitignore
lab_2/: CMakeLists.txt  pipe.cpp  queue.cpp  signals.cpp
lab_3/: CMakeLists.txt  find_in_vector.cpp  mul_matrix.cpp  queue.cpp  test.py
lab_3/include/: Matrix.h
lab_3/src/: Matrix.cpp
lab_4/: CMakeLists.txt  check.hpp  client.cpp  common.hpp  server.cpp
lab_5/: CMakeLists.txt  main.cpp
